recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value step
    current(step);
            ^Tree:4: error: not found: value baissecrayon
    baissecrayon();
    ^Tree:12: error: not found: value levecrayon
    levecrayon();
    ^